--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
-<mat-toolbar color="accent" class="flex-container">
+<mat-toolbar color="primary" class="flex-container">
   <div>
     <span>{{ title }}</span>
-    <a href="" mat-button>
+    <a routerLink="home" mat-button>
       <mat-icon class="mat-18">home</mat-icon>
       Accueil
     </a>
 
-    <a href="" mat-button>
+    <a [routerLink]="['/rooms']" mat-button>
       <mat-icon class="mat-18">room</mat-icon>
       Salles
     </a>
 
-    <a href="" mat-button>
+    <a [routerLink]="['/rooms/create']" mat-button>
       <mat-icon class="mat-18">add</mat-icon>
       Ajouter
     </a>
   </div>
   <div>
     <ng-container *ngIf="user == null; else log">
-      <a href="" mat-button>
+      <a [routerLink]="['auth/login']" mat-button>
         <mat-icon class="mat-18">lock_open</mat-icon>
         Login
       </a>
@@ -36,6 +36,10 @@
     </ng-template>
   </div>
 </mat-toolbar>
+
+<router-outlet>
+
+</router-outlet>
 
 <footer>
   <app-room-top-five></app-room-top-five>
