--- a/src/app/pages/room/room-top-five/room-top-five.component.html
+++ b/src/app/pages/room/room-top-five/room-top-five.component.html
@@ -1,4 +1,4 @@
-<h3>TOP {{rooms?.length}}</h3>
+<h3>TOP {{rooms.length}}</h3>
 <mat-grid-list cols="5">
     <mat-grid-tile *ngFor="let room of rooms">
         <mat-card>
