--- a/src/app/pages/room/list-room/list-room.component.html
+++ b/src/app/pages/room/list-room/list-room.component.html
@@ -1,1 +1,28 @@
-<p>list-room works!</p>
+<table mat-table #table [dataSource]="rooms">
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> nom </th>
+        <td mat-cell *matCellDef="let row"> {{row.name | uppercase }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Prix </th>
+        <td mat-cell *matCellDef="let row"> {{row.price}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="seat">
+        <th mat-header-cell *matHeaderCellDef> Nbr places </th>
+        <td mat-cell *matCellDef="let row"> {{row.seatCount}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Details </th>
+        <td mat-cell *matCellDef="let row">
+            <a>
+                <mat-icon class="mat-18">search</mat-icon>
+            </a>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="cols"></tr>
+    <tr mat-row *matRowDef="let row; columns: cols;"></tr>
+</table>
